# TempoBench

./: .gitignore  README.md  pyproject.toml  run_example.sh
.github/workflows/: build.yml  ci.yml  release.yml
artifacts/: fits.csv  runs.jsonl  runtime.html  summary.csv
artifacts_linux/: fits.csv  provenance.json  runs.jsonl  runtime.html  summary.csv
examples/: sort_bench.yaml  sort_impl.py  unique_bench.yaml  unique_impl.py
examples/top_100_algorithms/: README.md  __init__.py  catalog.py  demo.py  implementations_advanced.py  implementations_core.py  implementations_graph.py  probes.py  verify.py
examples/top_100_algorithms/demos/: __init__.py  a_star.py  aho_corasick_search.py  array_access.py  articulation_points.py  avl_tree_lookup.py  bellman_ford.py  binary_search.py  binary_search_tree_lookup.py  bipartite_check.py  boyer_moore_majority_vote.py  breadth_first_search.py  bridge_finding.py  bubble_sort.py  bucket_sort.py  closest_pair_points.py  cocktail_shaker_sort.py  coin_change.py  comb_sort.py  connected_components.py  convex_hull_graham_scan.py  convex_hull_monotonic_chain.py  counting_sort.py  cycle_sort.py  cyk_parsing.py  depth_first_search.py  dijkstra_heap.py  dijkstra_matrix.py  euclidean_gcd.py  exponential_search.py  fast_exponentiation.py  fibonacci_search.py  fisher_yates_shuffle.py  flood_fill.py  floyd_warshall.py  gaussian_elimination.py  gnome_sort.py  hash_table_lookup.py  heap_pop.py  heap_push.py  (+61 more)
src/tembench/: __init__.py  __main__.py  cli.py  complexity.py  config.py  plotting.py  reporting.py  runner.py  summarize.py
src/tembench/cli/: __init__.py  app.py
src/tembench/cli/commands/: compare.py  dashboard.py  heatmap.py  inspect.py  memory.py  plot.py  report.py  run.py  summarize.py  sysinfo.py
src/tembench/complexity/: __init__.py  core.py  fitting.py  formatting.py  models.py  selection.py
src/tembench/plotting/: __init__.py  _common.py  comparison.py  dashboard.py  distribution.py  runtime.py  save.py  summary.py
src/tembench/reporting/: __init__.py  comparison.py  extract.py  formatting.py  report.py  resources.py  system.py
src/tembench/reporting/assets/: __init__.py  report.css  theme-toggle.js
src/tembench/runner/: __init__.py  core.py  grid.py  parallel.py  process.py  process_group.py  provenance.py  result.py  serial.py
tests/: test_cli.py  test_complexity.py  test_config.py  test_plotting.py  test_runner.py  test_summarize.py  test_top_100_algorithms.py
